# Mframapa-AI

./: .replit  README.md  app.py  pyproject.toml  requirements.txt  train_model.py  train_simple_model.py
.history/: app_20251004232319.py  app_20251005014100.py  requirements_20251005002654.txt  requirements_20251005012401.txt  train_simple_model_20251005003954.py  train_simple_model_20251005004228.py  train_simple_model_20251005004438.py  train_simple_model_20251005004841.py  utils_20251004230106.py  utils_20251005020426.py  utils_20251005025202.py  utils_20251005030527.py  utils_20251005030813.py  utils_20251005035240.py  utils_20251005035442.py  utils_20251005041632.py
.history/.streamlit/: secrets_20251005015407.toml  secrets_20251005015622.toml
.history/pages/: 10_Gamified_Learning_20251004231612.py  10_Gamified_Learning_20251005041742.py  11_Historical_Explorer_20251004231736.py  11_Historical_Explorer_20251005021645.py  11_Historical_Explorer_20251005041710.py  12_Crowdsourcing_20251004232822.py  12_Crowdsourcing_20251005022734.py  12_Crowdsourcing_20251005035557.py  (+49 more)
.streamlit/: config.toml  secrets.toml  secrets.toml.example
attached_assets/: Pasted--MASTER-PROMPT-Mframapa-AI-Full-Stack-Development-ROLE-You-are-a-senior-full-stack-Pyt-1759618302629_1759618302630.txt
models/: feature_columns.pkl  normalization_params.pkl  xgboost_model_no2.json  xgboost_model_o3.json  xgboost_model_pm25.json
pages/: 12_Crowdsourcing.py  1_Home.py  2_Forecast.py  3_Profile.py  4_Compare.py  6_Explain.py  7_Policy_Dashboard.py  9_Health_Integration.py
(+1 files in other folders)
