[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium==0.25.2",
    "streamlit==1.38.0",
    "plotly==6.3.0",
    "folium==0.20.0",
    "earthaccess>=0.14.0",
    "pytz>=2025.2",
    "pillow==10.4.0",
    "pandas>=2.3.3",
    "reportlab==4.4.4",
    "netcdf4==1.7.2",
    "numpy>=2.3.3",
    "xgboost>=3.0.5",
    "requests>=2.32.5",
    "xarray>=2025.9.1",
    "matplotlib==3.10.6",
    "geopy>=2.4.1",
    "scikit-learn>=1.7.2",
]
